# liksyon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  test_scraper.py
.claude/skills/make_flashcards/: SKILL.md
scripts/: install.sh
src/liksyon/: agent.py  chunker.py  cli.py  scraper.py  storage.py  youtube_scraper.py
src/liksyon/export/: ankiconnect.py  genanki_export.py
src/liksyon/skills/make_flashcards/: SKILL.md
src/liksyon/tui/: app.py
