[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "liksyon"
version = "0.1.0"
description = "TUI-based AI study tool that turns course transcripts, videos, and learning materials into reviewable flashcards"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "browser-cookie3>=0.19",
    "genanki>=0.13",
    "typer>=0.12",
    "textual>=0.63",
    "rich>=13.7",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "tiktoken>=0.7",
    "youtube-transcript-api>=0.6",
]

[project.scripts]
liksyon = "liksyon.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/liksyon"]

[tool.hatch.build.targets.wheel.force-include]
"src/liksyon/skills" = "liksyon/skills"
